# osqp_quick_start

./: CMakeLists.txt  README.md  osqp_try.cpp
